Add ext4 security labels attribute so (get|set)cap works properly

--- a/kernel-amd64.conf
+++ b/kernel-amd64.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/x86_64 2.6.39-gentoo-r3 Kernel Configuration
-# Tue Aug 23 22:56:38 2011
+# Tue Aug 23 23:06:37 2011
 #
 CONFIG_64BIT=y
 # CONFIG_X86_32 is not set
@@ -992,7 +992,7 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT23=y
 CONFIG_EXT4_FS_XATTR=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
-# CONFIG_EXT4_FS_SECURITY is not set
+CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
 CONFIG_FS_MBCACHE=y
