Remove some generic x86 stuff

--- a/kernel-i686.conf
+++ b/kernel-i686.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux/i386 2.6.39-gentoo-r3 Kernel Configuration
-# Thu Aug 25 21:17:36 2011
+# Thu Aug 25 22:36:24 2011
 #
 # CONFIG_64BIT is not set
 CONFIG_X86_32=y
@@ -236,7 +236,7 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
 CONFIG_SMP=y
-CONFIG_X86_MPPARSE=y
+# CONFIG_X86_MPPARSE is not set
 # CONFIG_X86_BIGSMP is not set
 # CONFIG_X86_EXTENDED_PLATFORM is not set
 # CONFIG_X86_32_IRIS is not set
@@ -275,7 +275,7 @@ CONFIG_NO_BOOTMEM=y
 # CONFIG_MVIAC7 is not set
 CONFIG_MCORE2=y
 # CONFIG_MATOM is not set
-CONFIG_X86_GENERIC=y
+# CONFIG_X86_GENERIC is not set
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
 CONFIG_X86_CMPXCHG=y
 CONFIG_CMPXCHG_LOCAL=y
@@ -305,7 +305,7 @@ CONFIG_DMI=y
 # CONFIG_IOMMU_HELPER is not set
 # CONFIG_IOMMU_API is not set
 CONFIG_NR_CPUS=8
-# CONFIG_SCHED_SMT is not set
+CONFIG_SCHED_SMT=y
 CONFIG_SCHED_MC=y
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
 CONFIG_PREEMPT_NONE=y
@@ -315,7 +315,7 @@ CONFIG_X86_LOCAL_APIC=y
 CONFIG_X86_IO_APIC=y
 # CONFIG_X86_REROUTE_FOR_BROKEN_BOOT_IRQS is not set
 # CONFIG_X86_MCE is not set
-CONFIG_VM86=y
+# CONFIG_VM86 is not set
 # CONFIG_TOSHIBA is not set
 # CONFIG_I8K is not set
 # CONFIG_X86_REBOOTFIXUPS is not set
