--- a/kernel-i686.conf
+++ b/kernel-i686.conf
@@ -197,7 +197,6 @@ CONFIG_BLK_DEV_BSG=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_DEADLINE is not set
 # CONFIG_IOSCHED_CFQ is not set
-# CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
@@ -251,7 +250,7 @@ CONFIG_KVM_CLOCK=y
 CONFIG_KVM_GUEST=y
 # CONFIG_LGUEST_GUEST is not set
 CONFIG_PARAVIRT=y
-# CONFIG_PARAVIRT_SPINLOCKS is not set
+CONFIG_PARAVIRT_SPINLOCKS=y
 CONFIG_PARAVIRT_CLOCK=y
 # CONFIG_PARAVIRT_DEBUG is not set
 CONFIG_NO_BOOTMEM=y
