--- a/kernel-i686.conf
+++ b/kernel-i686.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/i386 3.2.1-gentoo-r2 Kernel Configuration
+# Linux/i386 3.2.12-gentoo Kernel Configuration
 #
 # CONFIG_64BIT is not set
 CONFIG_X86_32=y
@@ -865,6 +865,11 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_NOZOMI is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
+
+#
+# KCopy
+#
+# CONFIG_KCOPY is not set
 CONFIG_DEVKMEM=y
 
 #
@@ -1054,7 +1059,7 @@ CONFIG_VIRTIO_RING=y
 # Virtio drivers
 #
 CONFIG_VIRTIO_PCI=y
-CONFIG_VIRTIO_BALLOON=y
+# CONFIG_VIRTIO_BALLOON is not set
 # CONFIG_VIRTIO_MMIO is not set
 # CONFIG_STAGING is not set
 # CONFIG_X86_PLATFORM_DEVICES is not set
